# sensor-kit

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: builds.yml  doc.yml
src/: app.rs  main.rs
src/mode/: acceleration.rs  buzzer.rs  environment.rs  led.rs  light.rs  mod.rs  potentiometer.rs  sound.rs
src/peripherals/: accelerometer.rs  adc.rs  analog_input.rs  environment.rs  light.rs  mod.rs  potentiometer.rs  pwm.rs  pwm_led.rs
src/platform/: mod.rs
src/platform/nucleo_f413zh/: adc.rs  mod.rs  pwm.rs
src/platform/rp_pico/: adc.rs  mod.rs  pwm.rs
src/ui/: environment.rs  filled_circle.rs  horizontal_bar.rs  mod.rs  title_frame.rs  vector.rs  vector_box.rs
src/ui/layout/: centered_with_offset.rs  mod.rs
