[package]
edition = "2021"
name = "sensor-kit"
version = "0.1.0"
authors = ["Sarah Renkhoff <sarah.renkhoff@navimatix.de>"]
resolver = "2"

[[bin]]
name = "sensor-kit"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = ["task-arena-size-4096", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.2", features = ["defmt", "stm32f413zh", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embedded-dht-rs = { version = "0.4.0", features = ["dht20"] }
ssd1315 = "0.2.2"
embedded-graphics = "0.8.1"
display-interface-i2c = "0.5.0"
u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
embedded-layout = "0.4.1"
bme280 = { version = "0.5.1", features = ["async"] }
thiserror = { version = "2.0.12", default-features = false }
embedded-alloc = "0.6.0"
async-trait = "0.1.87"
fugit = { version = "0.3.7", features = ["defmt"] }
micromath = { version = "2.1.0", features = ["vector"] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
static_cell = "2.1.0"
accelerometer = "0.12.0"
lis3dh = { git = "https://github.com/Irockasingranite/lis3dh-rs", branch = "embedded-hal-1" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
